Editing articles; fixes to User, Article Entities; security fixes

--- a/app/Resources/views/about/about.html.twig
+++ b/app/Resources/views/about/about.html.twig
@@ -6,7 +6,7 @@
     <header>
         <h1 class="text-center">About Newscast</h1>
     </header>
-    <article>
+    <article class="block-width-80 center-block">
         <p class="lead">Newscast is a project, developed by Stepan Gerasimovich and Oleg Medvedsky
             in itransition.</p>
         <p class="lead">Icons made by
