--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,39 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Newscast{% endblock%}
-
 {% block body %}
-    <div class="center-block block-width-80">
-        <table class="nav-tabs table-condensed" title="Sort by:">
-            <tr class="small">
-                <th>Sort by:</th>
-                <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>
-                {{ knp_pagination_sortable(pagination, 'Category', 'cat.name') }}</th>
-                <th>{{ knp_pagination_sortable(pagination,
-                    'Release date', 'a.publicationDate', {direction:'desc'}) }}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'Views', 'a.views', {direction:'desc'}) }}</th>
-            </tr>
-        </table><br>
-        {% for article in pagination %}
-            <div class="margin-height-4">
-                <a  href="{{ path('article', {'slug': article.id}) }}" class="block-link">
-                    <div class="article-title">
-                        {{ article.title }}
-                    </div>
-                    <div class="hr"></div>
-                    <ul class="small attributes list-inline">
-                        <li>{{ article.publicationDate | date('d M Y') }}</li>
-                        <li class="margin-left-8">{{ article.category.name }}</li>
-                        <li class="margin-left-8">{{ article.views }} views</li>
-                    </ul>
-                    <div>
-                        {{ article.description }}
-                    </div>
-                </a>
+    {% if is_granted('ROLE_USER') %}
+        <div class="center-block block-width-80">
+            <table class="nav-tabs table-condensed" title="Sort by:">
+                <tr class="small">
+                    <th>Sort by:</th>
+                    <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>
+                    {{ knp_pagination_sortable(pagination, 'Category', 'cat.name') }}</th>
+                    <th>{{ knp_pagination_sortable(pagination,
+                        'Release date', 'a.publicationDate', {direction:'desc'}) }}</th>
+                    <th>{{ knp_pagination_sortable(pagination, 'Views', 'a.views', {direction:'desc'}) }}</th>
+                </tr>
+            </table><br>
+            {% for article in pagination %}
+                <div class="margin-height-4">
+                    <a  href="{{ path('article', {'id': article.id}) }}" class="block-link">
+                        <div class="article-title">
+                            {{ article.title }}
+                        </div>
+                        <div class="hr"></div>
+                        <ul class="small attributes list-inline">
+                            <li>{{ article.publicationDate | date('d M Y') }}</li>
+                            <li class="margin-left-8">{{ article.category.name }}</li>
+                            <li class="margin-left-8">{{ article.views }} views</li>
+                        </ul>
+                        <div>
+                            {{ article.description }}
+                        </div>
+                    </a>
+                </div>
+            {% endfor %}
+            <div class="navigation">
+                {{ knp_pagination_render(pagination) }}
             </div>
-        {% endfor %}
-        <div class="navigation">
-            {{ knp_pagination_render(pagination) }}
+        <div>
+        <div class="text-align-center margin-height-4">
+            <a href="{{ path('about') }}" class="gray-link">About Newscast</a>
         </div>
-    <div>
+    {% else %}
+        <div  class="alert alert-warning block-width-40 center-block">
+            You have to log in to watch news
+        </div>
+    {% endif %}
 {% endblock %}
